Some minor tweaks, made nav links fatter, fixed mobile nav being cut off. Added more content to reflect recent progresses

--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -68,6 +68,10 @@ a:hover {
   margin-bottom: 5rem;
 }
 
+.card h3 {
+  padding: 0 10px 0 10px;
+}
+
 /* About styles */
 
 #about h2 {
