--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 /* Color Palette */
 :root {
   --mustard: #ffde59;
+  --hover: #d1b647;
   --eerie: #1f1f1f;
   --davy: #5f5f5f;
   --white: #ffffff;
@@ -33,6 +34,9 @@ ul {
   width: 100%;
 
   background-color: var(--mustard);
+
+  border-bottom: 1px solid var(--davy);
+
   z-index: 1;
 }
 
@@ -46,9 +50,13 @@ ul {
   margin-left: -1rem;
 }
 
-#header-nav ul li {
-  margin: 0 1rem 0 1rem;
+
+
+#header-nav ul li a {
+  padding: 1rem .2rem 1rem 1rem;
 }
+
+
 
 /* Style the Home Page */
 #home {
@@ -135,5 +143,17 @@ ul {
 @media only screen and (min-width: 600px) {
   #home {
     background-image: URL('../images/tech-back.jpg');
+  }
+
+  #header-nav ul li {
+    border-right: 2px solid transparent;
+  }
+  
+  #header-nav ul li a {
+    padding: .5rem;
+  }
+
+  #header-nav ul li:hover {
+    border-right: 2px solid var(--eerie); 
   }
 }
